--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
             <h1>زكاة المال</h1>
         </div>
         <div class="inputdiv">
-            <input type="text" name="" id="inputnum" placeholder="ضع المبلغ التي تريد حسابه">
+            <input type="number" name="" id="inputnum" placeholder="ضع المبلغ التي تريد حسابه">
         </div>
         <div class="outputdiv">
             <input type="text" name="" id="outputnum" placeholder="الناتج" readonly>
         </div>
-        
     </div>
     <script src="main.js"></script>
 
